Displays all submitted memes

--- a/src/Components/Containers/Footer.scss
+++ b/src/Components/Containers/Footer.scss
@@ -4,11 +4,11 @@
     }
     
     footer {
-        position: fixed;
+        /*position: fixed;
         bottom: 0;
         left: 50%;
         margin-left: -37.5%;
-        width: 75%;
+        width: 75%;*/
        
      }
     
