--- a/src/Components/Users/Users.scss
+++ b/src/Components/Users/Users.scss
@@ -1,3 +1,11 @@
 .users-container{
-    
+    .title {
+        font-size: 20px;
+        color: pink;
+        font-weight: 800;
+    }
+    .data-header {
+        font-size: 12px;
+        font-weight: 300;
+    }
 }
