--- a/src/Components/Join/Join.scss
+++ b/src/Components/Join/Join.scss
@@ -5,6 +5,7 @@
     .data {
         display: flex;
         flex-direction: column;
+        align-items: center;
         color: #4A38F2;
         font-weight: 600;
         font-size: 20px;
@@ -27,6 +28,31 @@
             margin-top: 10px;
             transition: all 250ms ease-in-out;
             border-color: #4A38F2;
+        }
+        .password {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            overflow: visible;
+            position: relative
+            input {
+                height: 54px;
+                width: 274px;
+                padding: 0px 10px;
+                font-size: 16px;
+                font-family: "Open Sans", sans-serif;
+                background-color: #f3f3f3;
+                border-radius: 4px;
+                margin-top: 10px;
+                transition: all 250ms ease-in-out;
+                border-color: #4A38F2;
+            }
+            img.eye {
+                position: absolute;
+                height:34px;
+                width: 40px;
+                right:40%;
+            }
         }
     }
     button {
