--- a/src/Components/Meme/Meme.scss
+++ b/src/Components/Meme/Meme.scss
@@ -7,6 +7,7 @@
         height: 120px;
         animation: spin 2s linear infinite;
         align-items: center;
+        margin: auto;
       }
       
       @keyframes spin {
